# django-sb-admin-2-auth

./: README.md  pyproject.toml
.circleci/: config.yml
sb_admin_2_auth/: app_settings.py  apps.py  forms.py  urls.py  views.py
sb_admin_2_auth/templates/sb_admin_2/: base.html
sb_admin_2_auth/templates/sb_admin_2/auth/: card.html  confirm-email-sent.html  confirm-email.html  login.html  register.html
sb_admin_2_auth/templates/sb_admin_2/auth/forgot_password/: base.html  done.html  from_key.html  from_key_done.html
